[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/bar/Bar.gd" type="Script" id=1]
[ext_resource path="res://assets/bar/last_outpost_healthbar_three.png" type="Texture2D" id=2]
[ext_resource path="res://assets/bar/last_outpost_healthbar_five.png" type="Texture2D" id=3]
[ext_resource path="res://assets/bar/last_outpost_healthbar_fifteen.png" type="Texture2D" id=4]
[ext_resource path="res://assets/bar/last_outpost_healthbar_ten.png" type="Texture2D" id=5]
[ext_resource path="res://assets/bar/last_outpost_healthbar_twelve.png" type="Texture2D" id=6]
[ext_resource path="res://assets/bar/last_outpost_healthbar_eight.png" type="Texture2D" id=7]
[ext_resource path="res://assets/bar/last_outpost_healthbar_six.png" type="Texture2D" id=8]
[ext_resource path="res://components/bar/last_outpost_healthbar_four.png" type="Texture2D" id=9]

[node name="Bar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1217.0
offset_bottom = -720.0
custom_minimum_size = Vector2( 63, 22 )
script = ExtResource( 1 )

[node name="bar_15" type="Control" parent="."]
visible = false
offset_left = 111.0
offset_right = 111.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="1" type="ColorRect" parent="bar_15"]
offset_left = 647.0
offset_top = 4.0
offset_right = 720.0
offset_bottom = 77.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_15"]
offset_left = 569.667
offset_top = 0.666666
offset_right = 643.667
offset_bottom = 77.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_15"]
offset_left = 493.667
offset_top = 1.0
offset_right = 569.667
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_15"]
offset_left = 419.667
offset_top = 0.666666
offset_right = 492.667
offset_bottom = 77.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="5" type="ColorRect" parent="bar_15"]
offset_left = 339.667
offset_top = 4.33334
offset_right = 416.667
offset_bottom = 78.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="6" type="ColorRect" parent="bar_15"]
offset_left = 263.667
offset_top = 4.0
offset_right = 336.667
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="7" type="ColorRect" parent="bar_15"]
offset_left = 186.667
offset_right = 263.667
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="8" type="ColorRect" parent="bar_15"]
offset_left = 109.667
offset_top = 4.0
offset_right = 182.667
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="9" type="ColorRect" parent="bar_15"]
offset_left = 36.6667
offset_top = 4.0
offset_right = 109.667
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="10" type="ColorRect" parent="bar_15"]
offset_left = -40.0
offset_top = 4.0
offset_right = 37.0
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="11" type="ColorRect" parent="bar_15"]
offset_left = -120.0
offset_top = 3.0
offset_right = -43.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="12" type="ColorRect" parent="bar_15"]
offset_left = -193.0
offset_top = 3.0
offset_right = -119.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="13" type="ColorRect" parent="bar_15"]
offset_left = -273.333
offset_top = 3.33333
offset_right = -199.333
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="14" type="ColorRect" parent="bar_15"]
offset_left = -353.333
offset_top = 3.33333
offset_right = -279.333
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="15" type="ColorRect" parent="bar_15"]
offset_left = -437.0
offset_top = 3.0
offset_right = -353.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarFifteen" type="Sprite2D" parent="bar_15"]
position = Vector2( 164, 41 )
texture = ExtResource( 4 )

[node name="bar_12" type="Control" parent="."]
visible = false
offset_left = 77.0
offset_right = 140.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="1" type="ColorRect" parent="bar_12"]
offset_left = 550.0
offset_top = 7.33333
offset_right = 627.0
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_12"]
offset_left = 473.0
offset_top = 3.66667
offset_right = 547.0
offset_bottom = 80.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_12"]
offset_left = 397.0
offset_top = 4.0
offset_right = 473.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_12"]
offset_left = 323.0
offset_top = 3.66667
offset_right = 396.0
offset_bottom = 80.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="5" type="ColorRect" parent="bar_12"]
offset_left = 243.0
offset_top = 7.33334
offset_right = 320.0
offset_bottom = 81.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="6" type="ColorRect" parent="bar_12"]
offset_left = 167.0
offset_top = 7.0
offset_right = 240.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="7" type="ColorRect" parent="bar_12"]
offset_left = 90.0
offset_top = 3.0
offset_right = 167.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="8" type="ColorRect" parent="bar_12"]
offset_left = 13.0
offset_top = 7.0
offset_right = 86.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="9" type="ColorRect" parent="bar_12"]
offset_left = -60.0
offset_top = 7.0
offset_right = 13.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="10" type="ColorRect" parent="bar_12"]
offset_left = -140.0
offset_top = 6.66667
offset_right = -60.0
offset_bottom = 80.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="11" type="ColorRect" parent="bar_12"]
offset_left = -216.0
offset_top = 4.0
offset_right = -136.0
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="12" type="ColorRect" parent="bar_12"]
offset_left = -296.0
offset_top = 4.0
offset_right = -216.0
offset_bottom = 78.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarTwelve" type="Sprite2D" parent="bar_12"]
position = Vector2( 164, 41 )
texture = ExtResource( 6 )

[node name="bar_10" type="Control" parent="."]
visible = false
offset_left = 54.0
offset_right = 117.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="1" type="ColorRect" parent="bar_10"]
offset_left = 484.0
offset_top = 7.0
offset_right = 567.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_10"]
offset_left = 408.0
offset_top = 4.0
offset_right = 487.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_10"]
offset_left = 332.0
offset_top = 4.0
offset_right = 408.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_10"]
offset_left = 256.0
offset_top = 4.0
offset_right = 332.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="5" type="ColorRect" parent="bar_10"]
offset_left = 179.0
offset_top = 4.0
offset_right = 256.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="6" type="ColorRect" parent="bar_10"]
offset_left = 100.0
offset_top = 3.0
offset_right = 180.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="7" type="ColorRect" parent="bar_10"]
offset_left = 27.0
offset_top = 3.33333
offset_right = 100.0
offset_bottom = 81.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="8" type="ColorRect" parent="bar_10"]
offset_left = -52.0
offset_top = 4.0
offset_right = 27.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="9" type="ColorRect" parent="bar_10"]
offset_left = -126.667
offset_top = 6.66667
offset_right = -46.6667
offset_bottom = 80.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="10" type="ColorRect" parent="bar_10"]
offset_left = -210.0
offset_top = 6.66667
offset_right = -130.0
offset_bottom = 80.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarTen" type="Sprite2D" parent="bar_10"]
position = Vector2( 164, 41 )
texture = ExtResource( 5 )

[node name="bar_8" type="Control" parent="."]
visible = false
offset_left = 38.0
offset_right = 101.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="1" type="ColorRect" parent="bar_8"]
offset_left = 400.0
offset_top = 7.0
offset_right = 477.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_8"]
offset_left = 323.0
offset_top = 3.33333
offset_right = 397.0
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_8"]
offset_left = 249.667
offset_top = 3.33333
offset_right = 322.667
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_8"]
offset_left = 173.0
offset_top = 3.33333
offset_right = 246.0
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="5" type="ColorRect" parent="bar_8"]
offset_left = 93.0
offset_top = 7.0
offset_right = 170.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="6" type="ColorRect" parent="bar_8"]
offset_left = 10.0
offset_top = 7.0
offset_right = 90.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="7" type="ColorRect" parent="bar_8"]
offset_left = -63.0
offset_top = 3.0
offset_right = 10.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="8" type="ColorRect" parent="bar_8"]
offset_left = -146.667
offset_top = 6.66667
offset_right = -66.6667
offset_bottom = 80.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarEight" type="Sprite2D" parent="bar_8"]
position = Vector2( 164, 41 )
texture = ExtResource( 7 )

[node name="bar_6" type="Control" parent="."]
visible = false
offset_left = 20.0
offset_right = 83.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="1" type="ColorRect" parent="bar_6"]
offset_left = 316.667
offset_top = 6.66667
offset_right = 396.667
offset_bottom = 79.6667
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_6"]
offset_left = 240.0
offset_top = 3.33333
offset_right = 314.0
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_6"]
offset_left = 166.667
offset_top = 3.33333
offset_right = 239.667
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_6"]
offset_left = 90.0
offset_top = 3.33333
offset_right = 163.0
offset_bottom = 80.3333
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="5" type="ColorRect" parent="bar_6"]
offset_left = 10.0
offset_top = 7.0
offset_right = 87.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="6" type="ColorRect" parent="bar_6"]
offset_left = -73.0
offset_top = 7.0
offset_right = 7.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarSix" type="Sprite2D" parent="bar_6"]
position = Vector2( 164, 41 )
texture = ExtResource( 8 )

[node name="bar_5" type="Control" parent="."]
visible = false
offset_left = 10.0
offset_right = 73.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="bar_5"]
polygon = PackedVector2Array( -6.66667, 0, -30, 3.33333, -36.6667, 26.6667, -40, 60, -23.3333, 80, 13.3333, 80, 50, 83.3333, 313.333, 80, 360, 80, 366.667, 60, 363.333, 23.3333, 340, 3.33333, 270, 0 )

[node name="1" type="ColorRect" parent="bar_5"]
offset_left = 280.0
offset_top = 7.0
offset_right = 360.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_5"]
offset_left = 203.0
offset_top = 3.0
offset_right = 277.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_5"]
offset_left = 127.0
offset_top = 3.0
offset_right = 200.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_5"]
offset_left = 50.0
offset_top = 3.0
offset_right = 123.0
offset_bottom = 80.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="5" type="ColorRect" parent="bar_5"]
offset_left = -37.0
offset_top = 3.0
offset_right = 47.0
offset_bottom = 77.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarFive" type="Sprite2D" parent="bar_5"]
position = Vector2( 164, 41 )
texture = ExtResource( 3 )

[node name="bar_4" type="Control" parent="."]
visible = false
offset_left = 10.0
offset_right = 73.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="bar_4"]
polygon = PackedVector2Array( -6.66667, 0, -30, 3.33333, -36.6667, 26.6667, -40, 60, -23.3333, 80, 13.3333, 80, 50, 83.3333, 200, 80, 208, 72, 212, 40, 204, 12, 176, 0, 156, 0 )

[node name="1" type="ColorRect" parent="bar_4"]
offset_left = 205.0
offset_top = 8.0
offset_right = 284.0
offset_bottom = 77.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_4"]
offset_left = 124.0
offset_top = 4.0
offset_right = 198.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_4"]
offset_left = 44.0
offset_top = 4.0
offset_right = 129.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="4" type="ColorRect" parent="bar_4"]
offset_left = -36.0
offset_top = 4.0
offset_right = 49.0
offset_bottom = 81.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarFour" type="Sprite2D" parent="bar_4"]
position = Vector2( 124, 40 )
texture = ExtResource( 9 )

[node name="bar_3" type="Control" parent="."]
offset_left = 10.0
offset_right = 73.0
offset_bottom = 22.0
scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="bar_3"]
polygon = PackedVector2Array( -6.66667, 0, -30, 3.33333, -36.6667, 26.6667, -40, 60, -23.3333, 80, 13.3333, 80, 50, 83.3333, 200, 80, 208, 72, 212, 40, 204, 12, 176, 0, 156, 0 )

[node name="1" type="ColorRect" parent="bar_3"]
offset_left = 129.0
offset_top = 4.0
offset_right = 208.0
offset_bottom = 77.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="2" type="ColorRect" parent="bar_3"]
offset_left = 52.0
offset_right = 126.0
offset_bottom = 77.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="3" type="ColorRect" parent="bar_3"]
offset_left = -36.0
offset_right = 49.0
offset_bottom = 77.0
pivot_offset = Vector2( 13, 12 )
color = Color( 1, 0.458824, 0.196078, 1 )

[node name="LastOutpostHealthbarFive" type="Sprite2D" parent="bar_3"]
position = Vector2( 88, 40 )
texture = ExtResource( 2 )
